<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_movie"
        android:icon="@drawable/ic_movie"
        android:title="@string/movie" />

    <item
        android:id="@+id/navigation_series"
        android:icon="@drawable/ic_tv_show"
        android:title="@string/series" />

    <item
        android:id="@+id/navigation_bookmarks"
        android:icon="@drawable/ic_bookmarked_black"
        android:title="@string/bookmark" />

</menu>